--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -18,19 +18,28 @@
         </div>
 
         <div id="main">
-            <span>Время:</span>
+            <span>Часы нормального человека:</span>
             <br/>
             <p:clock pattern="HH:mm:ss dd.MM.yyyy" mode="server"/>
             <br/>
+            <div id="time-container"></div>
+            <script src="resources/js/clock.js" type="text/javascript"> </script>
+            <br/>
             <h:form>
-                <p:commandButton action="index" styleClass="glow-on-hover" value="C'mon, let's go!"/>
+                <p:commandButton onclick="show()" action="index" styleClass="glow-on-hover" value="C'mon, let's go!"/>
             </h:form>
+            <span id="con" style="display: none">Соединение...</span>
         </div>
 
         <div id="footer">
             <span class="itmo">Национальный исследовательский университет ИТМО, 2021г</span>
         </div>
     </div>
+    <script type="text/javascript">
+        function show() {
+            document.getElementById("con").style.display = '';
+        }
+    </script>
 </h:body>
 
 </html>
