--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui" xmlns:c="http://java.sun.com/jsp/jstl/core">
 <h:head>
-    <title>Web Lab 3</title>
+    <title>Web Lab 3 Main</title>
     <h:outputStylesheet library="css" name="main.css"/>
 </h:head>
 <h:body>
@@ -48,7 +48,7 @@
                 update="resTable"/>
                 <p:commandButton id="reset" styleClass="glow-on-hover" value="Сброс формы" icon="pi pi-times" action="${pointBean.reset()}"
                 update="x, y, r" disabled="true"/>
-                <p:commandButton action="welcome" styleClass="glow-on-hover" value="На главную"/>
+                <p:commandButton id="back" action="welcome" styleClass="glow-on-hover" value="На главную"/>
             </h:panelGrid>
             <p:remoteCommand name="changeR" actionListener="#{pointBean.onParameterChange()}" style="display: none;"/>
             <p:remoteCommand name="drawByJS" actionListener="#{pointBean.check()}" style="display: none;" update="resTable"/>
